testing/errors/.local-txtspm/lib/greeting.txts
IMPORT lib
VARIABLE lib.greeting "Hello"
